--- a/orcamentoWF/orcamentoWF/orcamentoWF.csproj
+++ b/orcamentoWF/orcamentoWF/orcamentoWF.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SqlClient, Version=4.6.1.6, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SqlClient.4.8.6\lib\net461\System.Data.SqlClient.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -94,7 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj">
-      <Project>{63a64d8c-69ec-4d84-854b-04ad073a3378}</Project>
+      <Project>{57E5B12D-747E-4323-8514-B58336610384}</Project>
       <Name>Data</Name>
     </ProjectReference>
   </ItemGroup>
