--- a/orcamentoWF/Data/Data.csproj
+++ b/orcamentoWF/Data/Data.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="ClienteCRUD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tecnico.cs" />
+    <Compile Include="TecnicoCRUD.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
