--- a/orcamentoWF/orcamentoWF/orcamentoWF.csproj
+++ b/orcamentoWF/orcamentoWF/orcamentoWF.csproj
@@ -68,6 +68,12 @@
     <Compile Include="FormPrincipal.Designer.cs">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmGerirCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGerirCliente.Designer.cs">
+      <DependentUpon>frmGerirCliente.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Adicionar\frmClienteAdicionar.resx">
@@ -78,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPrincipal.resx">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmGerirCliente.resx">
+      <DependentUpon>frmGerirCliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
