--- a/orcamentoWF/orcamentoWF/orcamentoWF.csproj
+++ b/orcamentoWF/orcamentoWF/orcamentoWF.csproj
@@ -68,6 +68,12 @@
     <Compile Include="FormPrincipal.Designer.cs">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAlterarCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAlterarCliente.Designer.cs">
+      <DependentUpon>frmAlterarCliente.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmGerirCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPrincipal.resx">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAlterarCliente.resx">
+      <DependentUpon>frmAlterarCliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmGerirCliente.resx">
       <DependentUpon>frmGerirCliente.cs</DependentUpon>
